# pyman

./: .gitignore  AGENTS.md  CHANGELOG.md  GEMINI.md  README.md  README.pt_BR.md  pyproject.toml  requirements.txt  setup.py
example_collection/: .environment-variables  collection-pos-script.py  collection-pre-script.py  config.yaml
example_collection/delete-request/: config.yaml
example_collection/get-request/: config.yaml  get-data-pos-script.py  get-data.yaml
example_collection/other-requests/: config.yaml  post-xml-request.yaml
example_collection/patch-request/: patch-data.yaml
example_collection/post-request/: config.yaml  post-data-pre-script.py  post-data.yaml  upload-file.yaml
example_collection/post-request/files/: data.txt
examples/bruno_collection/: root.bru
examples/bruno_collection/folder1/folder2/: nested.bru
examples/pyman_collection/: .environment-variables  collection-pos-script.py  config.yaml
examples/pyman_collection/delete-request/: delete-data.yaml
examples/pyman_collection/get-request/: config.yaml  get-data-pos-script.py  get-data.yaml
examples/pyman_collection/other-requests/: head-request.yaml  options-request.yaml
examples/pyman_collection/patch-request/: config.yaml
examples/pyman_collection/post-request/: config.yaml  post-data-pre-script.py  post-data.yaml  upload-file.yaml
examples/pyman_collection/put-request/: config.yaml  put-data.yaml
pyman/: bruno_importer.py  core_logic.py  log_reporter.py  postman_importer.py  pyman.py  pyman_helpers.py  request_parser.py
